--- a/application/admin/view/gamear/index.html
+++ b/application/admin/view/gamear/index.html
@@ -21,7 +21,7 @@
     <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="x_panel">
             <div class="x_title">
-                <h2>ar扫描参数设置</h2>
+                <h2>ar扫描游戏次数设置</h2>
                 <div class="clearfix"></div>
             </div>
             <div class="x_content">
@@ -58,6 +58,30 @@
                     </div>
                 </form>
             </div>
+
+            <div class="x_title">
+                <h2>ar扫描游戏规则编辑</h2>
+                <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+                <br>
+                <form class="form-horizontal form-label-left" id="ruleform">
+
+                    <div class="form-group">
+                        <div class="col-md-8 col-sm-8 col-xs-12 playnumber col-md-offset-2">
+
+                        </div>
+                    </div>
+                    <div class="ln_solid"></div>
+                    <div class="form-group">
+                        <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
+                            <button class="btn btn-primary" type="button" onclick="window.history.back(-1); ">返回</button>
+                            <button type="button" class="btn btn-success" id="rulesubmit">保存</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
         </div>
     </div>
 </div>
