--- a/application/admin/view/partners/index.html
+++ b/application/admin/view/partners/index.html
@@ -12,6 +12,7 @@
                     <thead>
                     <tr>
                         <th>序号</th>
+                        <th>小程序配置合作商id</th>
                         <th>名称</th>
                         <th>联系电话</th>
                         <th>AppId</th>
@@ -25,6 +26,7 @@
                     {volist name="list" id="vo" key="k" empty="暂时没有数据" }
                     <tr>
                         <th scope="row"><?php echo (($list->currentPage()-1)*$list->listRows() + $k) ?></th>
+                        <td>{:encode($vo.id)}</td>
                         <td>{$vo.name}</td>
                         <td>{$vo.phone}</td>
                         <td>{$vo.appid}</td>
