--- a/application/admin/view/public/header.html
+++ b/application/admin/view/public/header.html
@@ -40,6 +40,11 @@
     <link href="/ui/build/css/custom.min.css" rel="stylesheet">
     <link href="/ui/docs/css/jquery-confirm.min.css" rel="stylesheet">
 
+    <style>
+        td span{
+            line-height:normal;
+        }
+    </style>
     <!-- jQuery -->
     <script src="/ui/vendors/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
