--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -1,2 +1,65 @@
+<style>
+    .tile-stats h3{
+        font-size: 16px;
+        font-weight: normal;
+    }
+    .tile-stats .count {
+        font-size: 32px;
+        font-weight: 500;
+    }
+    .fist_title{
+        margin-top: 10px!important;
+    }
+    .x_title{
+        border:none;
+    }
+</style>
+<div class="row">
+    <div class="col-md-12">
+        <div class="x_panel col-lg-6 col-md-6 col-sm-12 col-xs-12">
+            <div class="x_title">
+                <h2>总数据</h2>
+                <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+                <div class="row top_tiles">
+                    <div class="animated flipInY col-lg-2 col-md-2 col-sm-6 col-xs-12">
+                        <div class="tile-stats">
+                            <h3 class="fist_title">总访问次数</h3>
+                            <div class="count">11<span style="font-size: 20px">次</span></div>
+                        </div>
+                    </div>
+                    <div class="animated flipInY col-lg-2 col-md-2 col-sm-6 col-xs-12">
+                        <div class="tile-stats">
+                            <h3 class="fist_title">总访问人数</h3>
+                            <div class="count">22<span style="font-size: 20px">次</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<h1>内容</h1>
+        <div class="x_panel">
+            <div class="x_title">
+                <ul class="nav nav-tabs" role="tablist" id="lineEditTabs">
+                    <li role="presentation" class="active"><a href="#">访问次数趋势</a></li>
+                    <li role="presentation"><a href="#">访问人数趋势</a></li>
+                </ul>
+                <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+
+            </div>
+        </div>
+
+        <div class="x_panel" style="width: 50%;">
+            <div class="x_title">
+                <h4>页面访问统计</h4>
+                <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+
+            </div>
+        </div>
+    </div>
+</div>
