--- a/application/admin/view/brands/add_page.html
+++ b/application/admin/view/brands/add_page.html
@@ -15,7 +15,7 @@
                             <input type="text" name="title" id="title" required="required" class="form-control col-md-7 col-xs-12">
                         </div>
                     </div>
-                    <div class="form-group">
+                    <!--<div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12" for="title">选择游戏类型<span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
@@ -45,21 +45,21 @@
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <div id="upload" class="upload one" id="case" data-num="1" data-type="png,jpg" action="{:url('api/Publicapi/addressImgUpload')}"></div>
                         </div>
-                    </div>
+                    </div>-->
 
                     <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="appId">appId <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="appId">appId
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                            <input type="text" id="appId" required="required" class="form-control" name="appId"></input>
+                            <input type="text" id="appId" class="form-control" name="appId"></input>
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="appSecret">appSecret <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="appSecret">appSecret
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                            <input type="text" id="appSecret" required="required" class="form-control" name="appSecret"></input>
+                            <input type="text" id="appSecret" class="form-control" name="appSecret"></input>
                         </div>
                     </div>
                     <div class="ln_solid"></div>
@@ -77,7 +77,7 @@
 </div>
 <script type="text/javascript">
     $(function() {
-        $("#upload").upload();
+        /*$("#upload").upload();
         $('#time').datetimepicker({
             format: "yyyy-mm-dd",
             autoclose: true,
@@ -101,6 +101,6 @@
                 $('#imgmsg').hide();
             }
 
-        });
+        });*/
     })
 </script>
