--- a/application/admin/view/brands/index.html
+++ b/application/admin/view/brands/index.html
@@ -13,7 +13,7 @@
                     <tr>
                         <th width="20%">序号</th>
                         <th width="20%">品牌名称</th>
-                        <th width="20%">领取方式</th>
+                        <!--<th width="20%">领取方式</th>-->
                         <th width="20%">状态</th>
                         <th width="20%">操作</th>
                     </tr>
@@ -23,13 +23,13 @@
                     <tr>
                         <th scope="row"><?php echo (($list->currentPage()-1)*$list->listRows() + $k) ?></th>
                         <td>{$vo.name}</td>
-                        <td>
+                        <!--<td>
                             <?php if($vo['type'] == 1){ ?>
                             <span>到店领取优惠券</span>
                             <?php }else{ ?>
                             <span>领取微信卡卷</span>
                             <?php } ?>
-                        </td>
+                        </td>-->
                         <td>
                             <?php if($vo['status'] == 1){ ?>
                                 <span class="green">启用</span>
