--- a/application/admin/view/waress/add_page.html
+++ b/application/admin/view/waress/add_page.html
@@ -18,11 +18,42 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="remark">图片 <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="title">奖品类型<span class="required">*</span>
+                        </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <select class="form-control" id="type" name="type">
+                                <option value="1" >优惠券</option>
+                                <option value="2" >实物奖品</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="time">领取时间 <span class="required">*</span>
+                        </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <input class="controls input-append date form_datetime form-control" name="time" id="time" type="text" value="{:date('Y-m-d',time())}" data-date="2018-09-01" data-date-format="yyyy mm dd" data-link-field="dtp_input1">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="address">领取地点 <span class="required">*</span>
+                        </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <input type="text" id="address" required="required" class="form-control" name="address"></input>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="map_pic">地点图片<span class="required">*</span>
+                        </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <div data-name="map_pic" class="upload one" id="map_pic" data-num="1" data-type="png,jpg" action="{:url('api/Publicapi/addressImgUpload')}"></div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="remark">商品图片<span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <div class="upload one" id="case" data-num="1" data-type="png,jpg" action="{:url('api/Publicapi/waresImgUpload')}"></div>
-                            <p hidden id="imgmsg" style="color: #E74C3C">不可为空！</p>
                         </div>
                     </div>
 
@@ -33,6 +64,8 @@
                             <textarea id="remark" required="required" class="form-control" name="message"></textarea>
                         </div>
                     </div>
+
+
 
                     <!--<div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12" for="remark">状态 <span class="required">*</span>
@@ -56,21 +89,21 @@
 </div>
 <script type="text/javascript">
     $(function() {
-        $("#case").upload(
-            //该函数为点击放大镜的回调函数，如没有该函数，则不显示放大镜
-            function(_this, data) {
-                console.log(data)
-            }
-        );
+        $("#case").upload();
+        $("#map_pic").upload();
         $('#form').submit(function () {
-            var info = $("input[name='upload']").val();
-            if(info == ''){
-                $('#imgmsg').show();
-                return false;
-            }else {
-                $('#imgmsg').hide();
-            }
 
+        });
+        $('#time').datetimepicker({
+            format: "yyyy-mm-dd",
+            autoclose: true,
+            todayBtn: true,
+            todayHighlight: true,
+            showMeridian: true,
+            pickerPosition: "bottom-left",
+            startView: 2,
+            minView: 2,
+            language: 'zh-CN',
         });
     })
 </script>
