--- a/application/admin/view/waress/edit_page.html
+++ b/application/admin/view/waress/edit_page.html
@@ -7,8 +7,9 @@
             </div>
             <div class="x_content">
                 <br>
-                <form id="form" data-parsley-validate="" data-parsley-required-message="不可为空！" class="form-horizontal form-label-left" novalidate="" action="{:url('admin/Waress/edit',array('wares_id' => $waresData['id']))}" method="post" class="dropzone" >
+                <form id="form" data-parsley-validate="" data-parsley-required-message="不可为空！" class="form-horizontal form-label-left" novalidate="" action="{:url('admin/Waress/edit')}" method="post" class="dropzone" >
                     <input type="hidden" name="brand_id" value="{$brandId}" >
+                    <input type="hidden" name="wares_id" value="{$waresData['id']}" >
                     <div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12" for="title">名称 <span class="required">*</span>
                         </label>
@@ -18,11 +19,42 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="remark">图片 <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="title">奖品类型<span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                            <div class="upload one" id="case" data-num="1" data-type="png,jpg" action="{:url('api/Publicapi/waresImgUpload')}" data-value="{$waresData['pic']}"></div>
-                            <p hidden id="imgmsg" style="color: #E74C3C">不可为空！</p>
+                            <select class="form-control" id="type" name="type">
+                                <option value="1" <?php if($waresData['type'] == 1)echo 'selected';  ?> >优惠券</option>
+                                <option value="2" <?php if($waresData['type'] == 2)echo 'selected';  ?> >实物奖品</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="time">领取时间 <span class="required">*</span>
+                        </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <input class="controls input-append date form_datetime form-control" name="time" id="time" type="text" value="{$waresData['time']}" data-date="2018-09-01" data-date-format="yyyy mm dd" data-link-field="dtp_input1">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="address">领取地点 <span class="required">*</span>
+                        </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <input type="text" id="address" required="required" class="form-control" name="address" value="{$waresData['address']}"></input>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="map_pic">地点图片<span class="required">*</span>
+                        </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <div data-value="{$waresData['address_pic']}" data-name="map_pic" class="upload one" id="map_pic" data-num="1" data-type="png,jpg" action="{:url('api/Publicapi/addressImgUpload')}"></div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="remark">商品图片<span class="required">*</span>
+                        </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <div data-value="{$waresData['pic']}" class="upload one" id="case" data-num="1" data-type="png,jpg" action="{:url('api/Publicapi/waresImgUpload')}"></div>
                         </div>
                     </div>
 
@@ -34,19 +66,17 @@
                         </div>
                     </div>
 
-
-                    <!--<div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="remark">状态 <span class="required">*</span>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="status">状态 <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12" style="padding-top: 6px;">
-                            <input type="checkbox" class="js-switch" checked name="status" />
+                            <input type="checkbox" id="status" class="js-switch" {:$waresData['status'] == 1 ? 'checked' : ''} name="status" />
                         </div>
-                    </div>-->
+                    </div>
                     <div class="ln_solid"></div>
                     <div class="form-group">
                         <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
                             <button class="btn btn-primary" type="button" onclick="window.history.back(-1); ">返回</button>
-                            <button class="btn btn-primary" type="reset">重置</button>
                             <button type="submit" class="btn btn-success">提交</button>
                         </div>
                     </div>
@@ -57,21 +87,21 @@
 </div>
 <script type="text/javascript">
     $(function() {
-        $("#case").upload(
-            //该函数为点击放大镜的回调函数，如没有该函数，则不显示放大镜
-            function(_this, data) {
-                console.log(data)
-            }
-        );
+        $("#case").upload();
+        $("#map_pic").upload();
         $('#form').submit(function () {
-            var info = $("input[name='upload']").val();
-            if(info == ''){
-                $('#imgmsg').show();
-                return false;
-            }else {
-                $('#imgmsg').hide();
-            }
 
+        });
+        $('#time').datetimepicker({
+            format: "yyyy-mm-dd",
+            autoclose: true,
+            todayBtn: true,
+            todayHighlight: true,
+            showMeridian: true,
+            pickerPosition: "bottom-left",
+            startView: 2,
+            minView: 2,
+            language: 'zh-CN',
         });
     })
 </script>
