--- a/application/admin/view/waress/index.html
+++ b/application/admin/view/waress/index.html
@@ -1,11 +1,19 @@
+<style>
+    .notice{
+        font-size: 12px;
+        color: red!important;
+    }
+</style>
 <div class="clearfix"></div>
 <div class="row">
     <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="x_panel">
             <div class="x_title">
-                <h2>商品列表</h2>
+                <h2>商品列表<span class="notice">&nbsp;&nbsp;&nbsp;(现阶段仅能添加一种商品或优惠券)</span></h2>
                 <a class="navbar-right panel_toolbox btn btn-danger" style="margin-left: 20px" type="button"  href="{:url('admin/Brands/index',array('brand_id' => $brandId))}">返回</a>
+                <?php if(count($list) < 1){ ?>
                 <a type="button" class="navbar-right panel_toolbox btn btn-primary" href="{:url('admin/Waress/addPage',array('brand_id' => $brandId))}">添加商品</a>
+                <?php } ?>
                 <div class="clearfix"></div>
             </div>
             <div class="x_content">
@@ -15,6 +23,10 @@
                         <th>序号</th>
                         <th>商品图片</th>
                         <th>商品名称</th>
+                        <th>商品类型</th>
+                        <th>领取时间</th>
+                        <th>地址</th>
+                        <th>地址图片</th>
                         <th>商品介绍</th>
                         <th>操作</th>
                     </tr>
@@ -25,7 +37,24 @@
                         <th scope="row"><?php echo (($list->currentPage()-1)*$list->listRows() + $k) ?></th>
                         <td><img src="{$vo.pic}" style="width: 80px;" /></td>
                         <td>{$vo.name}</td>
+                        <td>
+                            {if condition="($vo['type'] == 1)"}
+                            优惠券
+                            {else /}
+                            实物奖品
+                            {/if}
+                        </td>
+                        <td>{$vo.time}</td>
+                        <td>{$vo.address}</td>
+                        <td><img src="{$vo.address_pic}" style="width: 80px;" /></td>
                         <td style="max-width: 160px;word-wrap:break-word;">{$vo.introduce}</td>
+                        <td>
+                            {if condition="($vo['status'] == 1)"}
+                            <span class="green">启用</span>
+                            {else /}
+                            <span class="red">禁用</span>
+                            {/if}
+                        </td>
                         <td>
                             <a href="{:url('admin/Waress/editPage',array('wares_id' => $vo.id,'brand_id' => $brandId))}">编辑</a>
                             <a href="{:url('admin/Waress/delete',array('wares_id' => $vo.id,'brand_id' => $brandId))}">删除</a>
