--- a/application/admin/view/games/index.html
+++ b/application/admin/view/games/index.html
@@ -11,7 +11,7 @@
                 <table class="table table-hover">
                     <thead>
                     <tr>
-                        <th>序号</th>
+                        <th>ID</th>
                         <th>名称</th>
                         <th>游戏类型</th>
                         <th>状态</th>
@@ -22,7 +22,7 @@
                     <tbody>
                     {volist name="list" id="vo" key="k" empty="暂时没有数据" }
                     <tr>
-                        <th scope="row"><?php echo (($list->currentPage()-1)*$list->listRows() + $k) ?></th>
+                        <th scope="row">{$vo.id}</th>
                         <td>{$vo.title}</td>
                         <td>
                             <?php echo(\app\model\GameType::TYPE[$vo['type']]['name']);  ?>
