--- a/application/admin/view/partners/index.html
+++ b/application/admin/view/partners/index.html
@@ -11,7 +11,7 @@
                 <table class="table table-hover">
                     <thead>
                     <tr>
-                        <th>序号</th>
+                        <th>ID</th>
                         <th>小程序配置合作商id</th>
                         <th>名称</th>
                         <th>联系电话</th>
@@ -25,7 +25,7 @@
                     <tbody>
                     {volist name="list" id="vo" key="k" empty="暂时没有数据" }
                     <tr>
-                        <th scope="row"><?php echo (($list->currentPage()-1)*$list->listRows() + $k) ?></th>
+                        <th scope="row">{$vo.id}</th>
                         <td>{:encode($vo.id)}</td>
                         <td>{$vo.name}</td>
                         <td>{$vo.phone}</td>
