--- a/application/admin/view/projects/index.html
+++ b/application/admin/view/projects/index.html
@@ -11,7 +11,7 @@
                 <table class="table table-hover">
                     <thead>
                     <tr>
-                        <th>序号</th>
+                        <th>ID</th>
                         <th>项目名称</th>
                         <th>合作商</th>
                         <th>游戏名称</th>
@@ -23,9 +23,12 @@
                     <tbody>
                     {volist name="list" id="vo" key="k" empty="暂时没有数据" }
                     <tr>
-                        <th scope="row"><?php echo (($list->currentPage()-1)*$list->listRows() + $k) ?></th>
+                        <th scope="row">{$vo.id}</th>
                         <td>{$vo.name}</td>
-                        <td>{$vo.partnerName}</td>
+                        <td>
+                            合作商ID:{$vo.partner_id}<br/>
+                            合作商名称:{$vo.partnerName}
+                        </td>
                         <td>{$vo.gameName}</td>
                         <td>{$vo.waresName}</td>
                         <td>
