--- a/application/admin/view/waress/index.html
+++ b/application/admin/view/waress/index.html
@@ -20,7 +20,7 @@
                 <table class="table table-hover">
                     <thead>
                     <tr>
-                        <th>序号</th>
+                        <th>ID</th>
                         <th>商品图片</th>
                         <th>商品名称</th>
                         <th>商品类型</th>
@@ -28,13 +28,14 @@
                         <th>地址</th>
                         <th>地址图片</th>
                         <th>商品介绍</th>
+                        <th>状态</th>
                         <th>操作</th>
                     </tr>
                     </thead>
                     <tbody>
                     {volist name="list" id="vo" key="k" empty="暂时没有数据" }
                     <tr>
-                        <th scope="row"><?php echo (($list->currentPage()-1)*$list->listRows() + $k) ?></th>
+                        <th scope="row">{$vo.id}</th>
                         <td><img src="{$vo.pic}" style="width: 80px;" /></td>
                         <td>{$vo.name}</td>
                         <td>
