--- a/application/admin/view/public/header.html
+++ b/application/admin/view/public/header.html
@@ -39,6 +39,7 @@
     <!-- Custom Theme Style -->
     <link href="/ui/build/css/custom.min.css" rel="stylesheet">
     <link href="/ui/docs/css/jquery-confirm.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/v-charts/lib/style.min.css">
 
     <style>
         td span{
