--- a/application/admin/view/materials/edit_page.html
+++ b/application/admin/view/materials/edit_page.html
@@ -45,7 +45,7 @@
                                     <th>部件序号</th>
                                     <th>扫描图片</th>
                                     <th>部件图片</th>
-                                    <th>部件gif图片</th>
+                                    <th>部件扫描成功图片</th>
                                 </tr>
                                 </thead>
                                 <tbody id="imgcontent">
@@ -72,7 +72,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12">合成动画<span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">合成动画（.gif）<span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <div data-name="completeing" class="upload one" id="completeing" data-num="1" data-type="png,jpg,gif" action="{:url('api/Publicapi/game1ImgUpload')}"></div>
