--- a/application/admin/view/materials/index.html
+++ b/application/admin/view/materials/index.html
@@ -30,7 +30,7 @@
                                     <th>部件序号</th>
                                     <th>扫描图片</th>
                                     <th>部件图片</th>
-                                    <th>部件gif图片</th>
+                                    <th>部件扫描成功图片</th>
                                 </tr>
                                 </thead>
                                 <tbody id="imgcontent">
